k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deploy
  namespace: flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 999
        runAsGroup: 999
        fsgroup: 999
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: postgres-db-pvc
          persistentVolumeClaim:
            claimName: db-claim
      containers:
        - name: postgres-db
          image: postgres:15
          args:
            - "-c"
            - "unix_socket_directories=/var/lib/postgresql/data"
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 150m
              memory: 256Mi
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-db-pvc
              mountPath: "/var/lib/postgresql/data"
          livenessProbe:
            exec:
              command: ["pg_isready", "-h", "localhost"]
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            exec:
              command: ["pg_isready", "-h", "localhost"]
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 2

        - name: postgres-exporter
          image: prometheuscommunity/postgres-exporter:v0.15.0
          securityContext:
            runAsUser: 65534
            runAsGroup: 65534
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          ports:
            - containerPort: 9187
              name: metrics
          resources:
            requests:
              cpu: 50m
              memory: 50Mi
            limits:
              cpu: 100m
              memory: 100Mi
          livenessProbe:
            httpGet:
              path: /metrics
              port: 9187
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /metrics
              port: 9187
            initialDelaySeconds: 5
            periodSeconds: 5
