k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: flask-app
  name: db
spec:
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
