k8s/lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-lb
  namespace: flask-app
  labels:
    app: flask
spec:
  type: LoadBalancer
  selector:
    app: flask
  ports:
    - port: 5000
      targetPort: 5000
      name: http
