k8s/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-metrics
  namespace: flask-app
  labels:
    app: flask-metrics
spec:
  type: ClusterIP
  selector:
    app: flask
  ports:
    - name: metrics
      port: 9100
      targetPort: metrics
